syntax = "proto3";

option csharp_namespace = "Presentation.WebApi";

package accountprofile;

service AccountProfiler {
	rpc CreateAccountProfile (AccountProfileRequest) returns (AccountProfileReply);
}

message AccountProfileRequest {
	string user_id = 1;
	string first_name = 2;
	string last_name = 3;
	string phone_number = 4;
}

message AccountProfileReply {
	bool succeeded = 1;
	string message = 2;
}